add some basic build steps

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ hugo.exe
 .idea/**/tasks.xml
 .idea/dictionaries
 
+node_modules
+
 # Sensitive or high-churn files:
 .idea/**/dataSources/
 .idea/**/dataSources.ids
