--- a/config.toml
+++ b/config.toml
@@ -1,25 +1,16 @@
 baseurl = "/"  # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
 title = "Florian Traber"
-copyright = "&copy; 2017 Florian Traber"
-theme = "academic"
+copyright = "&copy; 2018 Florian Traber"
+theme = "custom"
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
 paginate = 10
 
-# Enable comments by entering your Disqus shortname
-disqusShortname = ""
-
-
-
-# Default language to use (if you setup multilingual support)
-defaultContentLanguage = "en"
-defaultContentLanguageInSubdir = false
-
 [outputs]
   home = [ "HTML", "CSS", "RSS" ]
-  section = [ "HTML", "RSS" ]
+  section = [ "HTML" ]
 
 # Configure BlackFriday Markdown rendering.
 #   See: https://gohugo.io/readfiles/bfconfig/
@@ -183,47 +174,36 @@ defaultContentLanguageInSubdir = false
     #   3 = MLA
     publication_format = 3
 
-  # Social/Academic Networking
-  #
-  # Icon pack "fa" includes the following social network icons:
-  #
-  #   twitter, weibo, linkedin, github, facebook, pinterest, google-plus,
-  #   youtube, instagram, soundcloud
-  #
-  #   For email icon, use "fa" icon pack, "envelope" icon, and
-  #   "mailto:your@email.com" as the link.
-  #
-  #   Full list: https://fortawesome.github.io/Font-Awesome/icons/
-  #
-  # Icon pack "ai" includes the following academic network icons:
-  #
-  #   google-scholar, arxiv, orcid, researchgate, mendeley
-  #
-  #   Full list: https://jpswalsh.github.io/academicons/
+
 
   [[params.social]]
     icon = "envelope"
     icon_pack = "fa"
+    icon_pack_base = "fa"
     link = "mailto:florian.traber@outlook.com"
 
   [[params.social]]
     icon = "github"
     icon_pack = "fa"
+    icon_pack_base = "fab"
     link = "//github.com/floriantraber"
 
   [[params.social]]
     icon = "xing"
+    icon_pack_base = "fab"
     icon_pack = "fa"
     link = "//www.xing.com/profile/Florian_Traber2"
 
   [[params.social]]
     icon = "linkedin"
+    icon_pack_base = "fab"
     icon_pack = "fa"
     link = "//linkedin.com/in/florian-traber-27649274/"
 
   [[params.social]]
     icon = "download"
     icon_pack = "fa"
+    icon_pack_base = "fa"
     link = "/files/florian_traber.pdf"
 
 
@@ -251,10 +231,6 @@ defaultContentLanguageInSubdir = false
   name = "Contact"
   url = "#contact"
   weight = 6
-
-
-# Languages
-#   Create a [languages.X] block for each language you want, where X is the language ID.
 
 # Configure the English version of the website.
 [Languages.en]
