add new job at yelp.

--- a/config.toml
+++ b/config.toml
@@ -48,7 +48,7 @@ defaultContentLanguageInSubdir = false
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.png"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "florian.traber@outlook.com"
-  address = "Stuttgart, Germany"
+  address = "Hamburg, Germany"
   office_hours = ""
   phone = ""
   skype = ""
