--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,3 +24,10 @@ jobs:
           cp -r website public 
           npm run gulp
           echo "floriantraber.de" >> public/CNAME 
+      - name: Deploy
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: gh-pages
+          FOLDER: build
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
