--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,5 +29,5 @@ jobs:
         env:
           REPO: self
           BRANCH: gh-pages
-          FOLDER: build
+          FOLDER: public
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
