--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: lts/*
       - run: npm ci
-      - run: npm gulp
+      - run: npm run gulp
       - run: echo "floriantraber.de" >> website/CNAME
       - name: Deploy
         uses: s0/git-publish-subdir-action@develop
